--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifolio</title>
-    <link rel="stylesheet" href="index.css">
+    
+    <link rel="stylesheet" href="style.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500&family=Poppins:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -18,8 +20,8 @@
                 <a href="#">Logo</a>
             </div>
             <div class="nav-group-page-items">
-                <a href="#">Home</a>
-                <a href="#">About</a>
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
                 <a href="#">Tech Stack</a>
                 <a href="#">Projects</a>
                 <a href="#">Contact</a>
@@ -37,7 +39,7 @@
             </div>
         </div>
 
-        <div class="main">
+        <div class="main-home">
             <div class="section-home">
                 <div class="section-home-item">
                     <h1>
